Recepcion Planificacion Docente - Listo
Falta acomoda json encode PHP, para que reciba Ñ y tildes

--- a/Administracion/consultarPlanEstudioPorLapso.html
+++ b/Administracion/consultarPlanEstudioPorLapso.html
@@ -15,6 +15,7 @@
 	<script src="../js/swipe.min.js"></script>
 	<script src="../js/jquery.cookie.js"></script>
 	<script src="../js/admins.js"></script>
+	<script src="../js/gestionAdministracionPlanLapso.js"></script>
 
 </head>
 <body class="p-admision">
@@ -147,69 +148,7 @@
 			</article>
 			<article id="noticias">
 				<header class="titulo"><h3>Consultar Plan De Estudio Por Lapso</h3></header>
-				<div class="planSem centrar">
-					<div class="disIn disInUno">
-						<figure>
-							<img width=200 src="../images/ministerio.png">	
-						</figure>
-					</div>
-					<div class="disIn disMe">
-						<div class="bold">REPÚBLICA BOLIVARIANA DE VENEZUELA</div>
-						<div class="bold">MINISTERIO DEL PODER POPULAR PARA LA EDUCACIÓN</div>
-						<div class="bold">UNIDAD EDUCATIVA "VENEZUELA 90"</div>
-						<div class="bold">VALENCIA-ESTADO CARABOBO</div>
-						<div class="bold">Telf. (0241) 8595806</div>
-					</div>
-					<div class="disIn disInDos">
-						<figure>
-							<img width=150 src="../images/logo.png">	
-						</figure>
-					</div>
-					<table>
-					<tr>
-						<td class="right marRig">DOCENTE:</td>
-						<td class="left marLef">Docente1</td>
-						<td class="right marRig">ASIGNATURA:</td>
-						<td class="left marLef">Ingles</td>
-						<td class="right marRig">AÑO:</td>
-						<td class="left marLef">1er Año</td>
-					</tr>
-					<tr>
-						<td class="right marRig">MENCIÓN:</td>
-						<td class="left marLef">Basica</td>
-						<td class="right marRig">LAPSO:</td>
-						<td class="left marLef">3ero</td>
-						<td class="right marRig">AÑO ESCOLAR:</td>
-						<td class="left marLef">12/13</td>
-					</tr>
-				</table>
-
-				<table border=1 class="tablaCarCon">
-					<thead>
-						<tr class="heLin">
-							<td class="marObEs">OBJETIVOS ESPECIFICOS</td>
-							<td class="marCon">CONTENIDO</td>
-							<td class="marEsMe">ESTRATEGIAS METODOLÓGICAS</td>
-							<td class="marRe">RECURSOS</td>
-							<td class="marTecE">TECNICAS DE EVALUACIÓN</td>
-							<td class="marPon">PONDERACIÓN</td>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>3-8 y 3-9 Hablar acerca de las acciones en pasado</td>
-							<td>Talking about past</td>
-							<td>Was, were, what were you doing? I was doing somenthing good.</td>
-							<td></td>
-							<td></td>
-							<td></td>
-						</tr>
-					</tbody>
-				</table>
-				<ul id="listaGestion">
-					<li><a id="bloque2" onclick="window.print(); void 0"></a><a class="textoAbajo" onclick="window.print(); void 0">Imprimir</a></li>
-				</ul>
-				</div>				
+							
 			</article>
 
 
