--- a/Administracion/recepcionPlanificacionDocente.html
+++ b/Administracion/recepcionPlanificacionDocente.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Venezuela 90 | Gestion De Libros</title>
+	<title>Venezuela 90 | Gestion Recepción Planificación Docente</title>
 	<link rel="stylesheet" href="../css/genericons.css">
 	<link rel="stylesheet" href="../css/normalize.css">
 	<link rel="stylesheet" href="../css/style.css">
@@ -168,17 +168,15 @@
 					<table class="tablaTamTd">
 						<tbody>							
 							<tr id="materiaRPD">
-								<td class="right espacioRi">Materia: </td>
+								<td id="tdIz" class="right espacioRi">Materia: </td>
 								<td class="left">
 									<select id="asignaturaRPD">
 										<option name="nada2">----------</option>	
-										<option name="matematica">Matematica</option>	
-										<option name="castellano">Castellano</option>	
 									</select>
 								</td>
 							</tr>							
 							<tr id="gradoRPD">
-								<td class="right espacioRi">Grado: </td>
+								<td id="tdIz" class="right espacioRi">Grado: </td>
 								<td class="left">
 									<select id="gradoRPD">
 										<option name="nada3">----------</option>	
@@ -218,17 +216,15 @@
 						<table id="tablagmd" class="tablaTamTd">
 							<tbody>							
 								<tr>
-									<td class="right espacioRi">Materia: </td>
+									<td id="tdIz" class="right espacioRi">Materia: </td>
 									<td class="left">
 										<select id="asignaturaDocent">
-											<option name="nada5">----------</option>	
-											<option name="matematica">Matematica</option>	
-											<option name="castellano">Castellano</option>	
+											<option name="nada5">----------</option>		
 										</select>
 									</td>
 								</tr>							
 								<tr>
-									<td class="right espacioRi">Grado: </td>
+									<td id="tdIz" class="right espacioRi">Grado: </td>
 									<td class="left">
 										<select id="gradoDocent">
 											<option name="nada6">----------</option>	
@@ -257,7 +253,7 @@
 						<table class="tablaTamTd">
 							<tbody>
 								<tr>
-									<td class="right espacioRi">Seleccione Planilla: </td>
+									<td class="right espacioRi">Seleccione Planilla: <span id="spa"></span></td>
 									<td class="left">
 										<select id="selectPlanillaRPD">
 											<option name="nada4">-------------------------</option>	
