Registro Cancelacion Mensualidades - Listo

--- a/Administracion/gestionInformacionAdministrativa.html
+++ b/Administracion/gestionInformacionAdministrativa.html
@@ -169,13 +169,13 @@
 						<p>Av. Soublette entre Independencia y Rondón N° 102-20 - Telf.: (0241) 859.58.06 Inscrito en el M.E.D. Pd10140814 Valencia - Edo. Carabobo</p>
 					</div>
 					<div id="divMen2">
-						Recibo N° <input type="text" id="monto">
-						<p>POR Bs. <input type="text" id="monto"></p>
-						<p class="ocul">CEDULA <input type="text" id="ced"></p>
+						Recibo N° <input type="text" id="numRecibo">
+						<p>POR Bs. &nbsp;&nbsp;&nbsp;&nbsp;<input type="text" id="monto"></p>
+						<p class="ocul">CEDULA &nbsp;&nbsp;<input type="text" id="ced"></p>
 					</div>
 					<div class="diCom">
+						<div><p>&nbsp;</p></div>
 						<div>
-							<br>
 							<label>He recibido de:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
 							<input class="in1 mmL" type="text" id="personaPago">
 							<div>
@@ -212,13 +212,67 @@
 						<div id="meses">
 
 						</div>
+						<div id="conceptoOtrosOculto">
+							<label class="mmL">Concepto:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+							<input class="in1 mmL" type="text" id="conceptoOtro">
+						</div>
 						<div class="left" id="algoOcul">
-							<label id="val" class="mmL centrar">Valencia,&nbsp;</label>
-							<input class="mmL kkk" type="text" id="dia">
+							<label id="val" class="mmL centrar">Valencia,</label>
+							<select class="mmL kkk" type="text" id="dia">
+								<option value="01">1</option>
+								<option value="02">2</option>
+								<option value="03">3</option>
+								<option value="04">4</option>
+								<option value="05">5</option>
+								<option value="06">6</option>
+								<option value="07">7</option>
+								<option value="08">8</option>
+								<option value="09">9</option>
+								<option value="10">10</option>
+								<option value="11">11</option>
+								<option value="12">12</option>
+								<option value="13">13</option>
+								<option value="14">14</option>
+								<option value="15">15</option>
+								<option value="16">16</option>
+								<option value="17">17</option>
+								<option value="18">18</option>
+								<option value="19">19</option>
+								<option value="20">20</option>
+								<option value="21">21</option>
+								<option value="22">22</option>
+								<option value="23">23</option>
+								<option value="24">24</option>
+								<option value="25">25</option>
+								<option value="26">26</option>
+								<option value="27">27</option>
+								<option value="28">28</option>
+								<option value="29">29</option>
+								<option value="30">30</option>
+								<option value="31">31</option>
+							</select>
 							<label class="mmLL">de</label>
-							<input class="mmL" type="text" id="mes">
-							<label class="mmLL">20</label>
-							<input class="mmL jjj" type="text" id="year">
+							<select class="mmL" id="mes">
+								<option value="01">Enero</option>
+								<option value="02">Febrero</option>
+								<option value="03">Marzo</option>
+								<option value="04">Abril</option>
+								<option value="05">Mayo</option>
+								<option value="06">Junio</option>
+								<option value="07">Julio</option>
+								<option value="08">Agosto</option>
+								<option value="09">Septiembre</option>
+								<option value="10">Octubre</option>
+								<option value="11">Noviembre</option>
+								<option value="12">Diciembre</option>
+							</select>
+							<label class="mmLL">del</label>
+							<select class="mmL jjj" type="text" id="year">
+								<option value="2013">2013</option>
+								<option value="2014">2014</option>
+								<option value="2015">2015</option>
+								<option value="2016">2016</option>
+							</select>
 						</div>
 						<div id="mostOcul" class="centrar">
 							
