Informacion Administrativa - Recibo De Pago

--- a/Administracion/gestionInformacionAdministrativa.html
+++ b/Administracion/gestionInformacionAdministrativa.html
@@ -183,6 +183,15 @@
 							<input class="in1 mmL" type="text" id="monto2">
 						</div>
 						<div>
+							<label class="mmL">Año Escolar:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+							<select class="in1 mmL" id="yearP">
+								<option value="nadaYear">-------------------------------</option>
+								<option value="1">2013/2014</option>
+								<option value="2">2014/2015</option>
+								<option value="3">2015/2016</option>
+							</select>
+						</div>
+						<div>
 							<label class="mmL">Por concepto de:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
 							<select class="in1 mmL" id="conceptoP">
 								<option value="nadaConcepto">-------------------------------</option>
@@ -317,36 +326,36 @@
 								<fieldset>
 								<legend>Septiembre</legend>
 								<label>Reinscripcion</label>
-								<label>Mensaualidad Bs. <span id="mes1">1500</span></label>
-								<label>Numero de Recibo <span id="recibo1">13910</span></label>
-								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								<label>Mensualidad<span></span></label>
+								<label>Numero de Recibo: <span id="reciboSeptiembre"></span></label>
+								<label>Fecha: <span id="fechaSeptiembre"></span></label>
 								</fieldset>
 							</td>
 							<td class="mesesFieldset">
 								<fieldset>
 								<legend>Diciembre</legend>
 								<label>&nbsp;</label>
-								<label>Mensaualidad Bs. <span id="mes1">1500</span></label>
-								<label>Numero de Recibo <span id="recibo1">13910</span></label>
-								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								<label>Mensualidad<span></span></label>
+								<label>Numero de Recibo: <span id="reciboDiciembre"></span></label>
+								<label>Fecha: <span id="fechaDiciembre"></span></label>
 								</fieldset>
 							</td>
 							<td class="mesesFieldset">
 								<fieldset>
 								<legend>Marzo</legend>
 								<label>Reinscripcion</label>
-								<label>Mensaualidad Bs. <span id="mes1">1500</span></label>
-								<label>Numero de Recibo <span id="recibo1">13910</span></label>
-								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								<label>Mensualidad<span></span></label>
+								<label>Numero de Recibo: <span id="reciboMarzo"></span></label>
+								<label>Fecha: <span id="fechaMarzo"></span></label>
 								</fieldset>
 							</td>
 							<td class="mesesFieldset">
 								<fieldset>
 								<legend>Junio</legend>
 								<label>&nbsp;</label>
-								<label>Mensaualidad Bs. <span id="mes1">1500</span></label>
-								<label>Numero de Recibo <span id="recibo1">13910</span></label>
-								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								<label>Mensualidad<span></span></label>
+								<label>Numero de Recibo: <span id="reciboJunio"></span></label>
+								<label>Fecha: <span id="fechaJunio"></span></label>
 								</fieldset>
 							</td>
 						</tr>
@@ -354,33 +363,33 @@
 							<td class="mesesFieldset">
 								<fieldset>
 								<legend>Octubre</legend>
-								<label>Mensaualidad Bs. <span id="mes2">1500</span></label>
-								<label>Numero de Recibo <span id="recibo2">13910</span></label>
-								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								<label>Mensualidad<span></span></label>
+								<label>Numero de Recibo: <span id="reciboOctubre"></span></label>
+								<label>Fecha: <span id="fechaOctubre"></span></label>
 								</fieldset>
 							</td>
 							<td class="mesesFieldset">
 								<fieldset>
 								<legend>Enero</legend>
-								<label>Mensaualidad Bs. <span id="mes2">1500</span></label>
-								<label>Numero de Recibo <span id="recibo2">13910</span></label>
-								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								<label>Mensualidad<span></span></label>
+								<label>Numero de Recibo: <span id="reciboEnero"></span></label>
+								<label>Fecha: <span id="fechaEnero"></span></label>
 								</fieldset>
 							</td>
 							<td class="mesesFieldset">
 								<fieldset>
 								<legend>Abril</legend>
-								<label>Mensaualidad Bs. <span id="mes2">1500</span></label>
-								<label>Numero de Recibo <span id="recibo2">13910</span></label>
-								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								<label>Mensualidad<span>1500</span></label>
+								<label>Numero de Recibo: <span id="reciboAbril"></span></label>
+								<label>Fecha: <span id="fechaAbril"></span></label>
 								</fieldset>
 							</td>
 							<td class="mesesFieldset">
 								<fieldset>
 								<legend>Julio</legend>
-								<label>Mensaualidad Bs. <span id="mes2">1500</span></label>
-								<label>Numero de Recibo <span id="recibo2">13910</span></label>
-								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								<label>Mensualidad<span></span></label>
+								<label>Numero de Recibo: <span id="reciboJulio"></span></label>
+								<label>Fecha: <span id="fechaJulio"></span></label>
 								</fieldset>
 							</td>
 						</tr>
@@ -388,33 +397,33 @@
 							<td class="mesesFieldset">
 								<fieldset>
 								<legend>Noviembre</legend>
-								<label>Mensaualidad Bs. <span id="mes3">1500</span></label>
-								<label>Numero de Recibo <span id="recibo3">13910</span></label>
-								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								<label>Mensualidad<span></span></label>
+								<label>Numero de Recibo: <span id="reciboNoviembre">13910</span></label>
+								<label>Fecha: <span id="fechaNoviembre"></span></label>
 								</fieldset>
 							</td>
 							<td class="mesesFieldset">
 								<fieldset>
 								<legend>Febrero</legend>
-								<label>Mensaualidad Bs. <span id="mes3">1500</span></label>
-								<label>Numero de Recibo <span id="recibo3">13910</span></label>
-								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								<label>Mensualidad<span></span></label>
+								<label>Numero de Recibo: <span id="reciboFebrero"></span></label>
+								<label>Fecha: <span id="fechaFebrero"></span></label>
 								</fieldset>
 							</td>
 							<td class="mesesFieldset">
 								<fieldset>
 								<legend>Mayo</legend>
-								<label>Mensaualidad Bs. <span id="mes3">1500</span></label>
-								<label>Numero de Recibo <span id="recibo3">13910</span></label>
-								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								<label>Mensualidad<span></span></label>
+								<label>Numero de Recibo: <span id="reciboMayo"></span></label>
+								<label>Fecha: <span id="fechaMayo"></span></label>
 								</fieldset>
 							</td>
 							<td class="mesesFieldset">
 								<fieldset>
 								<legend>Agosto</legend>
-								<label>Mensaualidad Bs. <span id="mes3">1500</span></label>
-								<label>Numero de Recibo <span id="recibo3">13910</span></label>
-								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								<label>Mensualidad<span></span></label>
+								<label>Numero de Recibo: <span id="reciboAgosto"></span></label>
+								<label>Fecha: <span id="fechaAgosto"></span></label>
 								</fieldset>
 							</td>
 						</tr>
@@ -438,12 +447,12 @@
 					</select>
 					<div id="divInCeInA" class="divInCeInAClass">
 						<label>Ingrese Cedula</label>
-						<input type="text" id="cedulaBusc">
+						<input type="text" id="cedulaBusc22">
 					</div>
 					<div id="divInMesInA" class="divInMesInAClass">
 						<label>Seleccione Mes</label>
-						<select id="meses">
-							<option>Enero</option>
+						<select id="meses22">
+							<option value="0">Enero</option>
 							<option>Febrero</option>
 							<option>Marzo</option>
 							<option>Abril</option>
@@ -468,7 +477,7 @@
 							<td>Monto De La Deuda</td>
 						</tr>
 					</thead>
-					<tbody>
+					<tbody id="tbodyDeuda">
 						<tr>
 							<td>Salinas Cindy</td>
 							<td>21.029.953</td>
@@ -478,7 +487,7 @@
 					</tbody>
 				</table>
 				<div id="links" class="centrar" >
-					<a >Enviar Reporte</a>
+					<a id="linkEnviarReporte">Enviar Reporte</a>
 				</div>
 			</article>
 		</div>
