Diseño Gestion De Horarios

--- a/Administracion/gestion.html
+++ b/Administracion/gestion.html
@@ -155,6 +155,7 @@
 						<li><a id="bloque6" href="recepcionGestionSolicitudes.html"></a><a class="textoAbajo" href="recepcionGestionSolicitudes.html">Recepción y Gestión De Solicitudes</a></li>
 						<li><a id="bloque7" href="gestionInformacionInstitucion.html"></a><a class="textoAbajo" href="gestionInformacionInstitucion.html">Gestión De La Información De La Institución</a></li>
 						<li><a id="bloque5" href="recepcionPlanificacionDocente.html"></a><a class="textoAbajo" href="recepcionPlanificacionDocente.html">Recepción Planificación Docente</a></li>
+						<li><a id="bloque6" href="gestionHorarios.html"></a><a class="textoAbajo" href="gestionHorarios.html">Gestión De Horarios</a></li>
 					</ul>
 				</div>			
 			</article>
