--- a/Administracion/gestionInformacionAdministrativa.html
+++ b/Administracion/gestionInformacionAdministrativa.html
@@ -313,7 +313,7 @@
 
 			<article id="noticias" class="informaAdm">
 				<header><h3>Información Administrativa - Consultar</h3></header>
-				<div class="centrar buscQ">
+				<div class="centrar">
 					<br>
 					<label>Ingrese Cedula</label>
 					<input type="text" id="cedulaBusc">
